Select Godcard bar disabled after placed workers